refactored the code, fixed issues