@@ -137,83 +137,64 @@ public class EventServiceImpl implements EventService {
     /**
      * {@inheritDoc}
      */
-    @Override
-    public EventDto save(AddEventDtoRequest addEventDtoRequest, String email,
-        MultipartFile[] images) {
-        validateEventRequest(addEventDtoRequest);
-        Event toSave = modelMapper.map(addEventDtoRequest, Event.class);
-        UserVO userVO = restClient.findByEmail(email);
-        User organizer = modelMapper.map(userVO, User.class);
-        toSave.setOrganizer(organizer);
-        toSave.setType(getEventType(toSave.getDates()));
-        if (images != null && images.length > 0 && images[0] != null) {
-            toSave.setTitleImage(fileService.upload(images[0]));
-            List<EventImages> eventImages = new ArrayList<>();
-            for (int i = 1; i < images.length; i++) {
-                if (images[i] != null) {
-                    eventImages.add(EventImages.builder().event(toSave).link(fileService.upload(images[i])).build());
-                }
-            }
-            toSave.setAdditionalImages(eventImages);
-        } else {
-            toSave.setTitleImage(DEFAULT_TITLE_IMAGE_PATH);
-        }
-
-        List<TagVO> tagVOs = tagService.findTagsWithAllTranslationsByNamesAndType(
-            addEventDtoRequest.getTags(), TagType.EVENT);
-
-        toSave.setTags(modelMapper.map(tagVOs,
-            new TypeToken<List<Tag>>() {
-            }.getType()));
-
-        Event savedEvent = eventRepo.save(toSave);
-        achievementCalculation.calculateAchievement(userVO, AchievementCategoryType.CREATE_EVENT,
-            AchievementAction.ASSIGN);
-        ratingCalculation.ratingCalculation(ratingPointsRepo.findByNameOrThrow("CREATE_EVENT"), userVO);
-        userNotificationService.createNewNotification(userVO, NotificationType.EVENT_CREATED, savedEvent.getId(),
-            savedEvent.getTitle());
-        return buildEventDto(savedEvent, organizer.getId());
+    public EventDto save(AddEventDtoRequest addEventDtoRequest, String email, MultipartFile[] images) {
+        Event savedEvent = processEventSaving(addEventDtoRequest, email, images);
+        return buildEventDto(savedEvent, savedEvent.getOrganizer().getId());
     }
 
     /**
      * {@inheritDoc}
      */
-    @Override
-    public EventResponseDto saveV2(AddEventDtoRequest addEventDtoRequest, String email,
-        MultipartFile[] images) {
+    public EventResponseDto saveV2(AddEventDtoRequest addEventDtoRequest, String email, MultipartFile[] images) {
+        Event savedEvent = processEventSaving(addEventDtoRequest, email, images);
+        return buildEventResponseDto(savedEvent, savedEvent.getOrganizer().getId());
+    }
+
+    private Event processEventSaving(AddEventDtoRequest addEventDtoRequest, String email, MultipartFile[] images) {
         validateEventRequest(addEventDtoRequest);
+
         Event toSave = modelMapper.map(addEventDtoRequest, Event.class);
         UserVO userVO = restClient.findByEmail(email);
         User organizer = modelMapper.map(userVO, User.class);
         toSave.setOrganizer(organizer);
         toSave.setType(getEventType(toSave.getDates()));
+
+        setEventImages(toSave, images);
+        setEventTags(toSave, addEventDtoRequest.getTags());
+
+        Event savedEvent = eventRepo.save(toSave);
+        postEventSaveActions(savedEvent, userVO);
+
+        return savedEvent;
+    }
+
+    private void setEventImages(Event event, MultipartFile[] images) {
         if (images != null && images.length > 0 && images[0] != null) {
-            toSave.setTitleImage(fileService.upload(images[0]));
+            event.setTitleImage(fileService.upload(images[0]));
             List<EventImages> eventImages = new ArrayList<>();
             for (int i = 1; i < images.length; i++) {
                 if (images[i] != null) {
-                    eventImages.add(EventImages.builder().event(toSave).link(fileService.upload(images[i])).build());
+                    eventImages.add(EventImages.builder().event(event).link(fileService.upload(images[i])).build());
                 }
             }
-            toSave.setAdditionalImages(eventImages);
+            event.setAdditionalImages(eventImages);
         } else {
-            toSave.setTitleImage(DEFAULT_TITLE_IMAGE_PATH);
+            event.setTitleImage(DEFAULT_TITLE_IMAGE_PATH);
         }
+    }
 
-        List<TagVO> tagVOs = tagService.findTagsWithAllTranslationsByNamesAndType(
-            addEventDtoRequest.getTags(), TagType.EVENT);
+    private void setEventTags(Event event, List<String> tagNames) {
+        List<TagVO> tagVOs = tagService.findTagsWithAllTranslationsByNamesAndType(tagNames, TagType.EVENT);
+        event.setTags(modelMapper.map(tagVOs, new TypeToken<List<Tag>>() {
+        }.getType()));
+    }
 
-        toSave.setTags(modelMapper.map(tagVOs,
-            new TypeToken<List<Tag>>() {
-            }.getType()));
-
-        Event savedEvent = eventRepo.save(toSave);
+    private void postEventSaveActions(Event savedEvent, UserVO userVO) {
         achievementCalculation.calculateAchievement(userVO, AchievementCategoryType.CREATE_EVENT,
             AchievementAction.ASSIGN);
         ratingCalculation.ratingCalculation(ratingPointsRepo.findByNameOrThrow("CREATE_EVENT"), userVO);
         userNotificationService.createNewNotification(userVO, NotificationType.EVENT_CREATED, savedEvent.getId(),
             savedEvent.getTitle());
-        return buildEventResponseDto(savedEvent, organizer.getId());
     }
 
     private EventType getEventType(List<EventDateLocation> dates) {
@@ -775,9 +756,11 @@ public class EventServiceImpl implements EventService {
     }
 
     private void setSubscribersV2(Collection<EventResponseDto> eventResponses, Long userId) {
-        List<Long> eventIds = eventResponses.stream().map(EventResponseDto::id).collect(Collectors.toList());
-        List<Event> subscribedEvents = eventRepo.findSubscribedAmongEventIds(eventIds, userId);
-        List<Long> subscribedEventIds = subscribedEvents.stream().map(Event::getId).toList();
+        List<Long> eventIds = eventResponses.stream().map(EventResponseDto::id).toList();
+        List<Long> subscribedEventIds = eventRepo.findSubscribedAmongEventIds(eventIds, userId)
+            .stream()
+            .map(Event::getId)
+            .toList();
 
         eventResponses.stream()
             .map(eventDto -> new EventResponseDto(
@@ -800,12 +783,19 @@ public class EventServiceImpl implements EventService {
                 eventDto.eventRate(),
                 eventDto.currentUserGrade()))
             .toList();
+
+        eventResponses.forEach(eventDto -> {
+            boolean isSubscribed = subscribedEventIds.contains(eventDto.id());
+            updateSubscriptionStatus(eventDto, isSubscribed);
+        });
     }
 
     private void setFollowersV2(Collection<EventResponseDto> eventResponses, Long userId) {
-        List<Long> eventIds = eventResponses.stream().map(EventResponseDto::id).collect(Collectors.toList());
-        List<Event> followedEvents = eventRepo.findFavoritesAmongEventIds(eventIds, userId);
-        List<Long> followedEventIds = followedEvents.stream().map(Event::getId).toList();
+        List<Long> eventIds = eventResponses.stream().map(EventResponseDto::id).toList();
+        List<Long> followedEventIds = eventRepo.findFavoritesAmongEventIds(eventIds, userId)
+            .stream()
+            .map(Event::getId)
+            .toList();
 
         eventResponses.stream()
             .map(eventDto -> new EventResponseDto(
@@ -828,6 +818,19 @@ public class EventServiceImpl implements EventService {
                 eventDto.eventRate(),
                 eventDto.currentUserGrade()))
             .toList();
+
+        eventResponses.forEach(eventDto -> {
+            boolean isFavorite = followedEventIds.contains(eventDto.id());
+            updateSubscriptionStatus(eventDto, isFavorite);
+        });
+    }
+
+    private void updateSubscriptionStatus(EventResponseDto eventDto, boolean isSubscribed) {
+        eventDto.withIsSubscribed(isSubscribed);
+    }
+
+    private void updateFavoriteStatus(EventResponseDto eventDto, boolean isFavorite) {
+        eventDto.withIsFavorite(isFavorite);
     }
 
     private EventResponseDto buildEventResponseDto(Event event, Long userId) {
